tests/baselines/reference/ambientEnumElementInitializer5.errors.txt
==== tests/cases/compiler/ambientEnumElementInitializer5.ts (1 errors) ====
    declare enum E {
     e = -0xA
       ~
!!! error TS1066: Ambient enum elements can only have integer literal initializers.
    }